[project]
name = "resume-score"
version = "0.1.0"
description = "ATS Resume Score Checker"
authors = [
    {name = "Logesh"}
]

requires-python = ">=3.11,<3.13"

dependencies = [
    "flask>=3.1.3,<4.0.0",
    "pymupdf>=1.27.2.3,<2.0.0.0",
    "scikit-learn>=1.5.0,<2.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"